infrastructure/configs/homelab/ingress-nginx/jellyfin.yaml
apiVersion: v1
kind: Service
metadata:
  name: external-service-jellyfin
  namespace: ingress-nginx
spec:
  clusterIP: None
  ports:
  - port: 8096
    targetPort: 8096
    protocol: TCP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: external-service-jellyfin
  namespace: ingress-nginx
subsets:
  - addresses:
      - ip: 192.168.0.47
    ports:
      - port: 8096
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin-ingress
  namespace: ingress-nginx
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod-cloudflare-dns01"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - jellyfin.home.oakhl.com
      secretName: jellyfin-home-oakhl-com-tls
  rules:
  - host: jellyfin.home.oakhl.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: external-service-jellyfin
            port:
              number: 8096
