infrastructure/configs/homelab/ingress-nginx/jellyseer.yaml
apiVersion: v1
kind: Service
metadata:
  name: external-service-jellyseer
  namespace: ingress-nginx
spec:
  clusterIP: None
  ports:
  - port: 5055
    targetPort: 5055
    protocol: TCP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: external-service-jellyseer
  namespace: ingress-nginx
subsets:
  - addresses:
      - ip: 192.168.0.206
    ports:
      - port: 5055
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyseer-ingress
  namespace: ingress-nginx
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod-cloudflare-dns01"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - jellyseer.home.oakhl.com
      secretName: jellyseer-home-oakhl-com-tls
  rules:
  - host: jellyseer.home.oakhl.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: external-service-jellyseer
            port:
              number: 5055
