infrastructure/configs/homelab/ingress-nginx/pihole.yml
apiVersion: v1
kind: Service
metadata:
  name: external-service-pihole-webadmin
  namespace: ingress-nginx
spec:
  clusterIP: None
  ports:
  - port: 8489
    targetPort: 8489
    protocol: TCP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: external-service-pihole-webadmin
  namespace: ingress-nginx
subsets:
  - addresses:
      - ip: 192.168.0.2
    ports:
      - port: 8489
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pihole-ingress
  namespace: ingress-nginx
  annotations:
    nginx.ingress.kubernetes.io/app-root: /admin/
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: pihole.home.oakhl.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: external-service-pihole-webadmin
            port:
              number: 8489
