infrastructure/configs/homelab/ingress-nginx/portainer.yaml
apiVersion: v1
kind: Service
metadata:
  name: external-service-portainer
  namespace: ingress-nginx
spec:
  clusterIP: None
  ports:
  - port: 9443
    targetPort: 9443
    protocol: TCP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: external-service-portainer
  namespace: ingress-nginx
subsets:
  - addresses:
      - ip: 192.168.0.35
    ports:
      - port: 9443
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portainer-ingress
  namespace: ingress-nginx
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    cert-manager.io/cluster-issuer: "letsencrypt-prod-cloudflare-dns01"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - portainer.home.oakhl.com
      secretName: portainer-home-oakhl-com-tls
  rules:
  - host: portainer.home.oakhl.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: external-service-portainer
            port:
              number: 9443
