infrastructure/configs/homelab/ingress-nginx/sonarr.yaml
apiVersion: v1
kind: Service
metadata:
  name: external-service-sonarr
  namespace: ingress-nginx
spec:
  clusterIP: None
  ports:
  - port: 8989
    targetPort: 8989
    protocol: TCP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: external-service-sonarr
  namespace: ingress-nginx
subsets:
  - addresses:
      - ip: 192.168.0.35
    ports:
      - port: 8989
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarr-ingress
  namespace: ingress-nginx
  annotations:
    # --- Cert-manager annotations to request a certificate ---
    # This annotation tells cert-manager to use the specified ClusterIssuer
    # to obtain a certificate for the host(s) defined in the TLS section.
    cert-manager.io/cluster-issuer: "letsencrypt-prod-cloudflare-dns01"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"

spec:
  ingressClassName: nginx
  # --- TLS configuration for frontend HTTPS (browser to Ingress) ---
  # This block defines the host(s) for which TLS will be enabled and
  # the Kubernetes Secret where the certificate will be stored by cert-manager.
  tls:
    - hosts:
        - sonarr.home.oakhl.com # The domain(s) this certificate will be valid for
      secretName: sonarr-home-oakhl-com-tls # Name of the Secret cert-manager will create/manage

  rules:
  - host: sonarr.home.oakhl.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: external-service-sonarr
            port:
              number: 8989
